@startuml
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
skinparam classAttributeIconSize 0

class Player {
    - budget : double
    + hasBudgetFor(stationType : String) : boolean
}

class BuildStationUI {
}

class BuildStationController {
    + getAvailableStationTypes() : List<String>
    + checkPlayerBudget(stationType : String) : boolean
    + checkOverbuilding(location : Object) : boolean
    + calculateGeometricCenter(location : Object) : Object
    + proposeStationName(location : Object, stationType : String) : String
    + buildStation(stationType : String, location : Object, center : Object, name : String)
}

class Repositories {
    - Repositories()
    + {static} getInstance() : Repositories
    + getStationRepository() : StationRepository
    + getMapRepository() : MapRepository
}

class StationRepository {
    + getAvailableStationTypes() : List<String>
    + save(station : Station)
}

class MapRepository {
    + getCurrentMap() : Map
}

class Map {
    + checkOverbuilding(location : Object) : boolean
    + calculateGeometricCenter(location : Object) : Object
    + proposeStationName(location : Object, stationType : String) : String
    + buildStation(stationType : String, location : Object, center : Object, name : String) : Station
}

class Station {
    - name : String
    - type : String
    - location : Object
    - center : Object
    + create(type : String, location : Object, center : Object, name : String) : Station
}

BuildStationUI ..> BuildStationController
BuildStationController .> Repositories
Repositories -> "1" Repositories : instance
Repositories --> "1" StationRepository : stationRepository
Repositories --> "1" MapRepository : mapRepository
BuildStationController ..> StationRepository
BuildStationController ..> MapRepository
BuildStationController ..> Map
BuildStationController ..> Player
StationRepository --> "*" Station : stations
MapRepository --> "1" Map : maps

@enduml